# multitax

./: .workflow-index.yml  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: apptainer.yml  main.yml  pypi.yml
sequana_pipelines/multitax/: __init__.py  blast.py  config.yaml  main.py  multiqc_config.yaml  multitax.rules  requirements.txt  run_sequana_taxonomy.py  schema.yaml  tools.txt
test/: test_main.py
test/data/: README  README.rst
test/data/krakendb/: hash.k2d  opts.k2d  seqid2taxid.map  taxo.k2d
